@@ -2,16 +2,6 @@ To do:
     remove process/processobs.cc
     remove Program typedef from process/process
 
-To repair: 
-
-    X2a:
-        X2a may also need a toString() member. Incomplete manpage section:
-       itbf(operator  std::ostream  &operator<<(std::ostream  &ostr, X2a const
-       &x2a)) This conversion operator inserts the converted value in the  x2a
-       parameter into the provided ostream.
-
-    Msg's open function should also set the opening mode
-
 --
 
 
