@@ -48,10 +48,27 @@ far.
         Convenience function opening the object tt(ifstream in) refers to. If
 opening the stream fails, a message is displayed and a fatal error message is
 generated. 
-    itb(static void open(std::ofstream &in, std::string const &name))
-        Convenience function opening the object tt(ofstream in) refers to. If
-opening the stream fails, a message is displayed and a fatal error message is
-generated. 
+    itb(static void open(std::ofstream &out, std::string const &name))
+        Convenience function opening (creating) the object tt(ofstream out)
+refers to. If opening the stream fails, a message is displayed and a fatal
+error message is generated.
+    itb(static void open(std::ofstream &out, std::string const &name, size_t
+protection)) 
+        Convenience function opening (creating) the object tt(ofstream out)
+refers to. The protection value is normally specified as an octal value. From
+the bf(chmod)(1) manpage:
+
+       The  mode is from one to  four  octal  digits  (0-7),  derived  by
+       adding up the bits with values 4, 2, and 1.  Omitted digits are assumed
+       to be leading zeros.  The first digit selects the set user ID  (4)  and
+       set group ID (2) and restricted deletion or sticky (1) attributes.  The
+       second digit selects permissions for the user who owns the  file:  read
+       (4),  write  (2),  and  execute  (1); the third selects permissions for
+       other users in the file's group, with the same values; and  the  fourth
+       for other users not in the file's group, with the same values.
+
+If opening the stream fails, a message is displayed and a fatal error message
+is generated.
     itb(static bool setDisplay(bool mode))
         Changes the setting of the `display' variable. At bf(true) (Note that
 the default is bf(false)) accumulated messages will be inserted into the
