@@ -54,13 +54,15 @@ conversion result is inspected.
 
 manpagesection(MEMBER FUNCTIONS)
      All members of bf(std::ostringstream) are
-available, as bf(FBB::X2a) inherits from this class.
+available, as bf(FBB::X2a) inherits from this class. In particular
+tt(ostringstream::str()) can be used to obtain the contents of an tt(X2a)
+object's text buffer.
 
 manpagesection(OVERLOADED OPERATORS)
     itemization(
     itbf(operator std::ostream &operator<<(std::ostream &ostr, X2a const &x2a))
-        This conversion operator inserts the converted value in the tt(x2a)
-parameter into the provided tt(ostream).
+        This conversion operator inserts the textual representation of the
+tt(x2a) parameter value into the provided tt(ostream).
     itb(operator std::string const() const): this conversion operator returns
 the information stored inside the bf(FBB::X2a) object.
     )
