@@ -4,6 +4,10 @@
 #include <iostream>
 #include <climits>
 
+#include <sys/types.h>
+#include <sys/stat.h>
+#include <fcntl.h>
+
 using namespace std;
 using namespace FBB;
 
