@@ -1,12 +1,15 @@
 bobcat (1.21.1) ISN
 
-  * Several man-pages were updated/modified (Config, Log, Process, User)
+  * Several man-pages were updated/modified (Config, Log, Process, User, X2a)
 
   * Process: new members
         close(): closes the parent's pipe to the child-process standard input
                  stream 
         str(): returns the content of the command string stored within the
                object 
+
+  * Msg: added member open(ofstream &out, std::string const &name, size_t
+    protection) opening an ofstream using a specified protection mode.
 
   * DateTime: TriVal's UNKNOWN value was changed; rfc2822() correctly
     represents the difference between UTC and local time, allowing for DST.
